--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.HCMUTEForums"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity.user.VerifyOTPActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.user.RegisterActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.user.LoginActivity"
             android:exported="false" />
         <activity
