--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -4,6 +4,14 @@ server:
     context-path: /ute
 
 spring:
+  mail:
+    username: hcmutesending@gmail.com
+    password: nbis htol vsck fyav
+    properties:
+      ®®mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
+    host: smtp.gmail.com
+    port: 587
   datasource:
     url: "jdbc:mysql://localhost:3306/hcmuteforums"
     username: root
