--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -7,6 +7,9 @@ espressoCore = "3.6.1"
 appcompat = "1.7.0"
 material = "1.10.0"
 activity = "1.10.0"
+retrofit = "2.11.0"
+converterGson = "2.11.0"
+gson = "2.12.1"
 constraintlayout = "2.2.0"
 
 [libraries]
@@ -16,6 +19,9 @@ ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitV
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
+retrofit2-converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 pinview = { module = "io.github.chaosleung:pinview", version = "1.4.4" }
