--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ activity = "1.10.0"
 retrofit = "2.11.0"
 converterGson = "2.11.0"
 gson = "2.12.1"
+okhttp = "3.12.0"
 constraintlayout = "2.2.0"
 
 [libraries]
@@ -25,6 +26,7 @@ retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 pinview = { module = "io.github.chaosleung:pinview", version = "1.4.4" }
+okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
