--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,8 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HCMUTEForums"
         android:usesCleartextTraffic="true"
-        android:name=".MyApp"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.activity.topic.TopicPostActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.activity.user.EditUserActivity"
             android:exported="false" />
