--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.7.3"
 circleimageview = "3.1.0"
+expandabletextview = "1.0.4"
 fragment = "1.8.6"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -18,6 +19,7 @@ recyclerview = "1.3.0"
 
 [libraries]
 circleimageview = { module = "de.hdodenhof:circleimageview", version.ref = "circleimageview" }
+expandabletextview = { module = "io.github.glailton.expandabletextview:expandabletextview", version.ref = "expandabletextview" }
 fragment = { module = "androidx.fragment:fragment", version.ref = "fragment" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
