Upload Avatar, CoverUrl Phase1

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,9 +24,6 @@
             android:name=".ui.activity.topic.TopicPostActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.user.EditUserActivity"
-            android:exported="false" />
-        <activity
             android:name=".ui.activity.user.VerifyOTPActivity"
             android:exported="false" />
         <activity
@@ -38,15 +35,28 @@
         <activity
             android:name=".ui.activity.user.UserMainActivity"
             android:exported="false" />
+
         <activity
             android:name=".ui.activity.MainActivity"
             android:exported="true" >
+
+
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
     </application>
 
 </manifest>
