--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,8 +4,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <!-- Cho Android 13+ -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -35,6 +37,9 @@
         <activity
             android:name=".ui.activity.user.UserMainActivity"
             android:exported="false" />
+        <activity android:name="com.yalantis.ucrop.UCropActivity"
+            android:theme="@style/CustomCropTheme"
+            tools:replace="android:theme"/>
 
         <activity
             android:name=".ui.activity.MainActivity"
