add: docker file for building spring boot

--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -24,6 +24,22 @@ services:
     volumes:
       - redis_data:/data
 
+  hcmuteforums:
+    build:
+      context: .              # Đường dẫn tới thư mục chứa Dockerfile
+      dockerfile: Dockerfile  # Tên file Dockerfile (nếu khác tên thì sửa)
+    container_name: hcmuteforums-container
+    ports:
+      - "8080:8080"
+    depends_on:
+      - mysql
+      - redis
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/hcmuteforums
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
+      SPRING_REDIS_HOST: redis
+      SPRING_REDIS_PORT: 6379
 volumes:
   mysql_data:
   redis_data:
