--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -24,8 +24,8 @@ jobs:
     #     password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Deploy using Docker Compose
       run: |
-        docker-compose down # Dừng và xóa container cũ (dựa trên docker-compose.yml)
-        docker-compose up -d --build # Build lại image (nếu có thay đổi) và khởi chạy container mới ở chế độ detached
+        docker compose down # Dừng và xóa container cũ (dựa trên docker-compose.yml)
+        docker compose up -d --build # Build lại image (nếu có thay đổi) và khởi chạy container mới ở chế độ detached
 
     - name: Clean up old images
       run: |
