--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,8 +18,15 @@
         android:theme="@style/Theme.HCMUTEForums"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
-
+        <activity
+            android:name=".ui.activity.user.NewPasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.user.ForgotPasswordOTPActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.user.ForgotPasswordActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.activity.user.EditNameActivity"
             android:exported="false" />
@@ -44,7 +51,7 @@
             tools:replace="android:theme" />
         <activity
             android:name=".ui.activity.MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
