--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.7.3"
 circleimageview = "3.1.0"
 expandabletextview = "1.0.4"
+expandabletextviewVersion = "0.1.4"
 fragment = "1.8.6"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -34,6 +35,7 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 material-v1130alpha12 = { module = "com.google.android.material:material", version.ref = "materialVersion" }
+ms-square-expandabletextview = { module = "com.ms-square:expandableTextView", version.ref = "expandabletextviewVersion" }
 retrofit2-converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
