--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
             android:name=".ui.activity.user.NewPasswordActivity"
             android:exported="false" />
         <activity
+            android:name=".ui.activity.topic.TopicDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.user.ForgotPasswordOTPActivity"
             android:exported="false" />
         <activity
