--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activity.topic.TopicUpdateActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.user.NewPasswordActivity"
             android:exported="false" />
         <activity
