--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,7 @@ FROM maven:3.9.9-amazoncorretto-21 AS build
 WORKDIR /app
 COPY pom.xml .
 COPY src ./src
-
+COPY upload ./upload
 RUN mvn clean package -DskipTests
 
 FROM openjdk:21-jdk-slim
