--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -46,7 +46,7 @@ jobs:
       run: |
         docker compose down
         docker compose up -d --no-build
-
+      timeout-minutes: 30
     - name: Clean up old images
       run: |
         docker image prune -a -f --filter "label!=maintainer=actions-runner"
